fixing box shadow for dark mode

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header {
   padding: 15px 30px;
   border: none;
   border-radius: 5px;
-  box-shadow: 0px 3px 3px -4px var(--color-text);
+  box-shadow: 0px 0px 7px 0px var(--color-text);
 }
 
 #region {
@@ -75,7 +75,7 @@ header {
   padding: 15px 30px;
   border: none;
   border-radius: 5px;
-  box-shadow: 0px 3px 3px -4px var(--color-text);
+  box-shadow: 0px 0px 7px 0px var(--color-text);
 }
 
 .fontawesome {
@@ -92,7 +92,7 @@ ul {
 li {
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0px 3px 3px 0px var(--color-text);
+  box-shadow: 0px 0px 7px 0px var(--color-text);
 }
 
 li a {
@@ -120,7 +120,6 @@ li img {
   display: inline-block;
   padding: 0px 10px;
   margin: 5px 5px;
-  background-color: var(--color-white);
   color: var(--color-text);
   text-decoration: none;
   font-weight: 600;
@@ -189,7 +188,9 @@ header.dark, #query.dark, #region.dark, li.dark, li a.dark, .mode.dark, .detail-
  color: var(--color-white);
 }
 
-
+#query.dark, #region.dark, li.dark, .detail-button.dark {
+  --color-text: hsl(0, 0%, 52%);
+}
 
 /* Media queries */
 
